kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffeeshop
  labels:
    name: coffeeshop
    environment: production
